--- a/project.ipynb
+++ b/project.ipynb
@@ -42,7 +42,7 @@
     }
    ],
    "source": [
-    "%pip install pandas numpy seaborn matplotlib plotly colorama"
+    "%pip install pandas numpy seaborn matplotlib plotly colorama scikit-learn"
    ]
   },
   {
